# iris

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  setup.py
configs/: data_config.yaml  train_cnet_modular.yaml  trainer_config.yaml
configs/lass_regression/: config.yaml  lasso_sweep_config.yaml
configs/lightning/: data_config.yaml  train_cnet_modular.yaml
configs/xgboost/: xgboost_config.yaml  xgboost_sweep.yaml
models/: cnet.py
notebooks/: complete_data_analysis.ipynb  data_exploration.ipynb
scripts/: segment_nuclei.py
src/: __init__.py  data_processing.py
src/data_pipeline/: data_filters.py  data_sources.py  data_transforms.py  dataset.py  feature_extractor.py  utils.py
src/models/: cnet.py  xgboost_trainer.py
src/train/: callbacks.py  train.py  train_with_cli.py  utils.py
tests/: test_compute_fucci_labels.py  test_data_module.py  test_data_transforms.py  test_feature_extractor.py  test_modular_cell_features_dataset.py
