[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iris"
version = "1.0.0"
description = "Machine learning pipeline for Iris dataset and H5 cell image data"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.4.0",
    "h5py>=3.7.0",
    "scipy>=1.7.0",
    "scikit-image>=0.19.0",
    "tqdm>=4.62.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
